--- a/src/main/resources/static/js/app/admin/views/adminDashboard.html
+++ b/src/main/resources/static/js/app/admin/views/adminDashboard.html
@@ -108,7 +108,7 @@
             </canvas>
         </md-grid-tile>
 
-        <md-grid-tile >
+        <!--<md-grid-tile >
             <md-grid-tile-footer layout="row">
                 <md-button class="md-icon-button" layout-align="end end">
                     <md-tooltip>
@@ -122,7 +122,7 @@
             <canvas id="id1" class="chart chart-bubble" chart-legend="true"
                     chart-data="dataThreads" chart-labels="labelsThreads">
             </canvas>
-        </md-grid-tile>
+        </md-grid-tile>-->
 
         <md-grid-tile >
             <md-grid-tile-footer layout="row">
@@ -133,7 +133,7 @@
                     <ng-md-icon icon="cached" ng-click="dataGet()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
-                <span>Heap</span>
+                <span>Garbage collector counts</span>
             </md-grid-tile-footer>
             <canvas id="id2" class="chart chart-pie" chart-legend="true"
                     chart-data="dataCounts" chart-labels="labelsCounts">
@@ -149,9 +149,9 @@
                     <ng-md-icon icon="cached" ng-click="dataGet()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
-                <span>Heap</span>
+                <span>Garbage collector times</span>
             </md-grid-tile-footer>
-            <canvas id="id2" class="chart chart-pie" chart-legend="true"
+            <canvas id="id3" class="chart chart-pie" chart-legend="true"
                     chart-data="dataTimes" chart-labels="labelsTimes">
             </canvas>
         </md-grid-tile>
