--- a/src/main/resources/static/js/app/admin/views/adminDashboard.html
+++ b/src/main/resources/static/js/app/admin/views/adminDashboard.html
@@ -19,27 +19,27 @@
             </canvas>
         </md-grid-tile>
 
-        <md-grid-tile md-rowspan="1" md-colspan="5" md-colspan-sm="2" md-colspan-xs="1">
-            <canvas id="mail" class="chart chart-bar" chart-data="dataMail"
-                    chart-labels="mailVrijeme" chart-series="mailSeries"></canvas>
-            <md-grid-tile-footer layout="row">
-                <md-button class="md-icon-button">
-                    <md-tooltip>
-                        Refresh
-                    </md-tooltip>
-                    <ng-md-icon icon="cached" ng-click="dataGet()"
-                                style="fill: black"></ng-md-icon>
-                </md-button>
-                <md-button class="md-icon-button">
-                    <md-tooltip>
-                        Clear
-                    </md-tooltip>
-                    <ng-md-icon icon="clear" ng-click="clearCustomMetrics()"
-                                style="fill: black"></ng-md-icon>
-                </md-button>
-                <span>Mailovi</span>
-            </md-grid-tile-footer>
-        </md-grid-tile>
+        <!--<md-grid-tile md-rowspan="1" md-colspan="5" md-colspan-sm="2" md-colspan-xs="1">-->
+            <!--<canvas id="mail" class="chart chart-bar" chart-data="dataMail"-->
+                    <!--chart-labels="mailVrijeme" chart-series="mailSeries"></canvas>-->
+            <!--<md-grid-tile-footer layout="row">-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>-->
+                        <!--Refresh-->
+                    <!--</md-tooltip>-->
+                    <!--<ng-md-icon icon="cached" ng-click="dataGet()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>-->
+                        <!--Clear-->
+                    <!--</md-tooltip>-->
+                    <!--<ng-md-icon icon="clear" ng-click="clearCustomMetrics()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<span>Mailovi</span>-->
+            <!--</md-grid-tile-footer>-->
+        <!--</md-grid-tile>-->
 
         <md-grid-tile >
             <md-grid-tile-footer layout="row">
